--- a/components/album-square.html
+++ b/components/album-square.html
@@ -18,5 +18,6 @@
 		<div class="title">
 			<a href="#">Các ca khúc pop ballad Việt nổi bật 2020</a>
 		</div>
+		<div class="artist"></div>
 	</div>
 </div>
