--- a/css/components.css
+++ b/css/components.css
@@ -1,9 +1,10 @@
+/*--------------------weekly charts----------------------*/
 .col-album{
 	max-width: 100%;
 	border-radius: 2px;
 }
 
-.col-album .card-image{
+.card-image{
 	width: 100%;
 	height: auto;
 	position: relative;
@@ -14,7 +15,7 @@
     border-radius: 4px;
 }
 
-.col-album .card-image .image>img{
+.card-image .image>img{
 	position: initial;
     top: 0;
     left: 0;
@@ -35,7 +36,7 @@
 	transform: scale(1.1);
 }
 
-.col-album .card-image .overlay{
+.card-image .overlay{
 	width: 100%;
     height: 100%;
     position: absolute;
@@ -50,7 +51,7 @@
 	opacity: 1;
 }
 
-.col-album .card-image .play-actions{
+.card-image .play-actions{
 	position: absolute;
     width: 100%;
     height: 100%;
@@ -70,7 +71,7 @@
 	opacity: 1;
 }
 
-.col-album .card-image .play-actions ul{
+.card-image .play-actions ul{
 	width: 85%;
 	display: flex;
     justify-content: space-around;
@@ -78,15 +79,83 @@
     align-items: center;
 }
 
-.col-album .card-image .play-actions ul li{
+.card-image .play-actions ul li{
 	margin: 0 auto;
 	font-size: 2em;
 }
 
-.col-album .card-image .play-actions ul .fa-play-circle{
+.card-image .play-actions ul .fa-play-circle{
 	font-size: 3em;
 }
 
-.col-album .card-info{
+.card-info .card-title{
 	font-size: 1.2em;
 }
+
+.card-info .artist{
+	color: #a0a0a0;
+    font-weight: 400;
+    font-size: 0.8em;
+    line-height: 1.3;
+}
+/*-------------------------------------------------------*/
+
+/*--------------------weekly charts----------------------*/
+.weekly-charts{
+  display: flex;
+  align-items: center;
+  padding: 12px 0;
+  transition: all 0.5s;
+}
+
+.weekly-charts:hover{
+  background-color: rgba(0,0,0,.15);
+  border-radius: 4px;
+}
+
+.weekly-charts .number{
+  font-size: 20px;
+  padding: 0 8px;
+}
+
+.weekly-charts .card-image{
+  margin-right: 8px;
+}
+
+.weekly-item .card-image{
+  width: 50px !important;
+  height: 50px !important;
+}
+
+.weekly-item .info{
+  flex-grow: 1;
+}
+
+.weekly-item .song-title{
+  font-size: 1.em;
+  margin-bottom: 2px;
+  font-weight: 600;
+}
+
+.weekly-item .singer{
+  font-size: 0.8em;
+  color: #999;
+}
+
+.weekly-item .view-count{
+  font-size: 1em;
+  padding: 0 8px;
+}
+
+.weekly-item:hover .card-image .image>img{
+	transform: scale(1.1);
+}
+
+.weekly-item:hover .card-image .overlay{
+	opacity: 1;
+}
+
+.weekly-item:hover .card-image .play-actions{
+	opacity: 1;
+}
+/*-------------------------------------------------------*/
