--- a/css/components.css
+++ b/css/components.css
@@ -159,3 +159,62 @@
 	opacity: 1;
 }
 /*-------------------------------------------------------*/
+
+/*--------------------single choice----------------------*/
+.col-album-circle{
+  background-image: url(./images/spotlight-bg-dark.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding: 15px;
+  border: .9px solid #232323;
+  border-radius: 4px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.col-album-circle .card-image{
+  max-width: 120px;
+  max-height: 120px;
+  border-radius: 50%;
+  text-align: left
+}
+
+.col-album-circle:hover .card-image .image>img{
+	transform: scale(1.1);
+}
+
+.col-album-circle:hover .card-image .overlay{
+	opacity: 1;
+}
+
+.col-album-circle:hover .card-image .play-actions{
+	opacity: 1;
+}
+
+.col-album-circle .info{
+  flex-grow: 1;
+  text-align: right;
+  width: 100%;
+}
+
+.col-album-circle .info .spotlight-badge{
+  background: linear-gradient(to right,#f508b7,#9102ff);
+  padding: 3px 8px;
+  position: relative;
+  display: inline-block;
+  border-radius: 4px;
+  font-size: 11px;
+  font-weight: 700;
+  line-height: 12px;
+  color: #fff;
+  margin-bottom: 5px;
+}
+
+.col-album-circle .info .artist{
+  padding: 0 5px;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 700;
+}
