--- a/css/components.css
+++ b/css/components.css
@@ -268,3 +268,50 @@
     font-weight: 900;
 }
 /*-------------------------------------------------------*/
+
+/*-----------------------new song------------------------*/
+.album-item{
+  width: 190px;
+  height: 100px;
+}
+
+.album-item .card-image{
+  position: relative;
+  overflow: hidden;
+}
+
+.album-item .card-image img{
+  width: 100%;
+  height: auto;
+  transition: all 0.5s;
+  transform: scale(1);
+}
+
+.album-item:hover .card-image img{
+  transform: scale(1.1);
+}
+
+.album-item .card-image .overlay-gradient{
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(0deg, rgba(77,77,77,1) 0%, rgba(77,77,77,0) 100%);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+.album-item .card-image .overlay-gradient span{
+  color: #fff;
+  font-size: 20px;
+  padding-bottom: 10px;
+  transition: all 0.5s;
+}
+
+.album-item:hover .card-image .overlay-gradient span{
+  padding-bottom: 20px;
+}
+/*-------------------------------------------------------*/
