--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,10 @@
 }
 
 body{
-	font-family: Arial, san-serif;
+    font-family: Roboto,sans-serif !important;
+    background-color: #0D021A !important;
+    font-weight: 400;
+    overflow-x: hidden;
 }
 
 a{
@@ -16,3 +19,72 @@ a:hover {
     color: #9877FF;
 }
 
+.container{
+    position: relative;
+}
+
+.carousel .slide-thumbnail{
+	position: absolute;
+    bottom: 0;
+    right: 0;
+    z-index: 15;
+    width: 100%;
+    padding-right: 20%;
+    margin-left: 0;
+    text-align: right;
+    list-style: none;
+    overflow: hidden;
+}
+
+.carousel .slide-thumbnail ul{
+	display: inline-block;
+}
+
+.carousel .slide-thumbnail li{
+	display: inline-block;
+	float: left;
+	visibility: hidden;
+	transform: translateY(100px);
+}
+
+.carousel .slide-thumbnail ul>li:nth-child(1) {
+    transition: transform .2s ease-out;
+}
+
+.carousel .slide-thumbnail ul>li:nth-child(2) {
+    transition: transform .2s ease-out 0.05s;
+}
+
+.carousel .slide-thumbnail ul>li:nth-child(3) {
+    transition: transform .2s ease-out 0.1s;
+}
+
+.carousel:hover .slide-thumbnail li{
+	visibility: visible;
+	transform: translateY(0px);
+}
+
+.carousel .thumbnail-link{
+	display: inline-block;
+    height: 60px;
+    width: 60px;
+    position: relative;
+    margin-left: 5px;
+    border-radius: 4px;
+}
+    
+.carousel .thumbnail-link img{
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 4px;
+    border: 2px solid rgba(255,255,255,0);
+    transition: all .5s;
+}
+
+.carousel .thumbnail-link img:hover{
+	border: 2px solid #fff;
+	border-radius: 4px;
+}
