Edit homepage, slide and recently-listen

--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,24 @@ body{
 }
 
 a{
-	color: #000;
-	text-decoration: none;
+	color: #fff !important;
+	text-decoration: none !important;
+}
+
+a:focus {
+    outline: 0px auto -webkit-focus-ring-color !important;
+    outline-offset: -2px;
 }
 
 a:hover {
-    color: #9877FF;
+    color: #9877FF !important;
 }
 
 .container{
     position: relative;
 }
 
+/*--------------------section slider-main----------------------*/
 .carousel .slide-thumbnail{
 	position: absolute;
     bottom: 0;
@@ -88,3 +94,169 @@ a:hover {
 	border: 2px solid #fff;
 	border-radius: 4px;
 }
+/*-------------------------------------------------------*/
+
+
+/*--------------------section recently-listen----------------------*/
+.recently-listen{
+	margin: 50px 0;
+}
+
+.recently-listen .title-music{
+	margin-bottom: 5px;
+}
+
+.recently-listen .title-music>a{
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 36px;
+	transition: all 0.3s;
+	text-decoration: none;
+	text-transform: uppercase;
+}
+
+.col-album{
+	max-width: 100%;
+	border-radius: 2px;
+}
+
+.card-image{
+	width: 100%;
+	height: auto;
+	position: relative;
+    display: inline-block;
+    overflow: hidden;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
+
+.card-image .image>img{
+	position: initial;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-transition: all .7s;
+    -moz-transition: all .7s;
+    transition: all .7s;
+    transform: scale(1);
+}
+
+.col-album:hover .card-image .image>img{
+	transform: scale(1.1);
+}
+
+.card-image .overlay{
+	width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0,0,0,0.5);
+    opacity: 0;
+    transition: all 0.5s;
+}
+
+.col-album:hover .card-image .overlay{
+	opacity: 1;
+}
+
+.card-image .play-actions{
+	position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    color: #fff;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: all 0.7s;
+}
+
+.col-album:hover .card-image .play-actions{
+	opacity: 1;
+}
+
+.card-image .play-actions ul{
+	width: 85%;
+	display: flex;
+    justify-content: space-around;
+    list-style: none;
+    align-items: center;
+}
+
+.card-image .play-actions ul li{
+	margin: 0 auto;
+	font-size: 1.4em;
+}
+
+.card-image .play-actions ul .fa-play-circle{
+	font-size: 2em;
+}
+
+.card-info .card-title{
+	font-size: 1.2em;
+}
+
+.card-info .artist{
+	color: #a0a0a0;
+    font-weight: 400;
+    font-size: 0.8em;
+    line-height: 1.3;
+}
+
+.album-slider .slick-wrapper {
+  width: 100%;
+}
+
+.album-slider .slide-item {
+  display: flex !important;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.album-slider .slick-arrow{
+	border: 0;
+    height: 40px;
+    width: 40px;
+    border-radius: 0;
+    text-align: center;
+    padding: 0;
+    position: absolute;
+    left: auto;
+    top: -35px;
+    cursor: pointer;
+    color: #fff;
+}
+
+.album-slider .slidersel-control-prev{
+	right: 45px;
+}
+
+.album-slider .slidersel-control-next{
+	right: 0px;
+}
+
+.album-slider .slick-arrow .fas{
+	font-size: x-large;
+}
+
+.slick-slide{
+	padding: 0 10px;
+}
+
+.album-slider .card-info .title{
+	text-align: left;
+}
+/*-------------------------------------------------------*/
