--- a/css/style.css
+++ b/css/style.css
@@ -817,4 +817,74 @@ a:hover {
 
 .album-item:hover .card-image .overlay-gradient span{
   padding-bottom: 20px;
+}
 /*-------------------------------------------------------*/
+
+.bg-footer{
+    position: relative;
+    z-index: 0;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #0D021A;
+    background-image: none;
+    border-top: 1px solid rgba(255,255,255,.06);
+    text-align: center;
+    padding: 50px 0;
+}
+
+.bg-footer .license-logo {
+    display: -webkit-box;
+    display: -moz-box;
+    display: box;
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: -ms-flexbox;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #888;
+    margin-right: 4px;
+    margin-bottom: 10px;
+}
+
+.bg-footer .logo {
+    height: 40px;
+    width: 40px;
+    display: inline-block;
+    background-image: url(../images/logo-mp-3.png);
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+
+.bg-footer .license-info{
+    margin-left: 10px;
+}
+
+.bg-footer .license-info .copyright {
+    font-size: 12px;
+}
+
+.bg-footer .nav-footer {
+    line-height: 1.8;
+}
+
+.bg-footer .nav-footer ul{
+	list-style: none;
+}
+
+.bg-footer .nav-footer li {
+    display: inline-block;
+}
+
+.bg-footer .nav-footer li .link {
+    color: #888 !important;
+    font-size: 12px;
+}
+
+.bg-footer .nav-footer li .link.link-special {
+    position: relative;
+    top: 5px;
+    font-size: 22px;
+    color: #d8d8d8 !important;
+    margin: 0 5px;
+}
